--- a/web/css/InicioSesion-estilos.css
+++ b/web/css/InicioSesion-estilos.css
@@ -221,21 +221,61 @@ font-size: 18px;
     text-align: justify;
 }
 
+/* ventana flotante */
+
+.flotante{
+
+    background-color: #4e4b4b;
+    color: #e6dddd;
+    width: 38%;
+    padding: 20px;
+    border-radius: 10px;
+    position: absolute;
+    position: fixed;
+    left: 29%;
+    top: 32%;
+    height: 20%;
+    display: none;
+    padding: 50px;
+
+    
+}
+
+#contenedor-gris{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background: rgba(0, 0,0, 0.6)
+}
+
+#cerrar img{
+    position: absolute;
+    right: 1px;
+    height: 30px;
+    width: 30px;
+    top: -5px;
+
+}
+
+/*estilos de ventana flotante*/
 
 
+.txt{
+width: 500px;
+height: 40px;
+text-align: center;
+border-radius: 5px;
 
+}
 
+#cerrar button{
+    background-color: #2354b68c;
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+    color: blanchedalmond
 
-
-
-
-
-
-
-
-
-
-
+}
 
 
 
